terraform-for-aws-infra/modules/vpc/main.tf
resource "aws_vpc" "main" {
    cidr_block           = "10.0.0.0/16"
    enable_dns_hostnames = true

    tags = {
        Name = "ostad-11-vpc"
    }
}


resource "aws_internet_gateway" "igw" {
    vpc_id      = aws_vpc.main.id

    tags = {
        Name = "ostad-11-igw"
    }
}

resource "aws_subnet" "ostad_11_public_subnet_1" {
    vpc_id                      = aws_vpc.main.id
    cidr_block                  = "10.0.1.0/24"
    map_public_ip_on_launch     = true


    tags = {
        Name = "ostad_11_public_subnet_1"
    }
}


resource "aws_subnet" "ostad_11_private_subnet_1" {
    vpc_id                      = aws_vpc.main.id
    cidr_block                  = "10.0.11.0/24"
    map_public_ip_on_launch     = false


    tags = {
        Name = "ostad_11_private_subnet_1"
    }
}


resource "aws_eip" "nat_eip" {
    vpc = true
}
resource "aws_nat_gateway" "nat" {
    allocation_id               = aws_eip.nat_eip.id
    subnet_id                   = aws_subnet.ostad_11_public_subnet_1.id

    tags = {
        Name = "ostad-11-nat"
    }
}

resource "aws_route_table" "public_rt" {
    vpc_id         = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }
    tags = {
        Name = "ostad_11_public_rt"
    }
}

resource "aws_route_table_association" "public_assoc" {
    subnet_id       = aws_subnet.ostad_11_public_subnet_1.id
    route_table_id  = aws_route_table.public_rt.id
}

resource "aws_route_table" "private_rt" {
    vpc_id          = aws_vpc.main.id

    route {
        cidr_block  = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.nat.id
    }
    tags = {
        Name = "ostad_11_private_rt"
    }
}

resource "aws_route_table_association" "private_assoc" {
    subnet_id       = aws_subnet.ostad_11_private_subnet_1.id
    route_table_id  = aws_route_table.private_rt.id
}
